RESOLVED FIXED69501
SpeculativeJIT::isKnownString() is wrong
https://bugs.webkit.org/show_bug.cgi?id=69501
Summary SpeculativeJIT::isKnownString() is wrong
Filip Pizlo
Reported 2011-10-05 22:15:53 PDT
It returns true if the child is a GetLocal and the local's prediction is PredictString. But that's not right, since PredictString just means that the local is predicted to be a string, rather than it's known to be a string. For some predictions, like array, boolean, and int32, we enforce predictions on local variables when we do a SetLocal. But we don't do this for strings. Hence, we can't have the same logic for strings as we have for those types.
Attachments
the patch (1.36 KB, patch)
2011-10-05 22:18 PDT, Filip Pizlo
oliver: review+
Filip Pizlo
Comment 1 2011-10-05 22:18:56 PDT
Created attachment 109915 [details] the patch
Oliver Hunt
Comment 2 2011-10-05 22:36:28 PDT
Comment on attachment 109915 [details] the patch It makes me sad that we can't propagate stringiness :-(
Filip Pizlo
Comment 3 2011-10-05 22:37:45 PDT
(In reply to comment #2) > (From update of attachment 109915 [details]) > It makes me sad that we can't propagate stringiness :-( I'm working on it! Happy thoughts!
Filip Pizlo
Comment 4 2011-10-06 02:08:23 PDT
Landed in r96794.
Note You need to log in before you can comment on or make changes to this bug.