SpeculativeJIT::isKnownString() is wrong https://bugs.webkit.org/show_bug.cgi?id=69501

Reviewed by Oliver Hunt.

Removed the wrong case (GetLocal predicted String) and added a case that
works (StrCat).

* dfg/DFGSpeculativeJIT.h:
(JSC::DFG::SpeculativeJIT::isKnownString):



Canonical link: https://commits.webkit.org/85552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96794 268f45cc-cd09-0410-ab3c-d52691b4dbfc